cleaning up and making adjustments for berks'd version in chef server.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,5 +23,5 @@ platforms:
 
 suites:
 - name: default
-  run_list: ["recipe[promet_mysql-cookbook]"]
+  run_list: ["recipe[promet_mysql]"]
   attributes: {}
